<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('entry_payments', function (Blueprint $table) {
            $table->id();
            $table->foreignId('entry_id')
                ->constrained('entries')
                ->onDelete('cascade');

            $table->foreignId('payment_method_id')
                ->constrained('payment_methods')
                ->onDelete('restrict');
            $table->decimal('amount', 10, 2);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('entry_payments');
    }
};
